--- a/hater-hack/package.json
+++ b/hater-hack/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.4",
