--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "flash": "^1.1.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.4",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "eslint": "^5.7.0",
