--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "cloudinary": "^1.11.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
@@ -26,7 +27,8 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.4",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^5.7.0",
