--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "cloudinary": "^1.11.0",
     "connect-flash": "^0.1.1",
